--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ div#LayoutLYR { }
               <tr valign="top" align="left">
                 <td colspan="2"></td>
                 <td width="359" id="Text1" class="TextObject">
-                  <p style="text-align: center; margin-bottom: 0px;"><b><span style="font-size: 16px;">Please click on Logo above to download the current AVH Calendar PDF</span></b></p>
+                  <p style="text-align: center; margin-bottom: 0px;"><b><span style="font-size: 16px;">Please click on the logo above to download the current AVH Calendar PDF</span></b></p>
                 </td>
                 <td></td>
               </tr>
